--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,24 @@
 <body>
 	<header>
 		<div class="col-xs-3">
-			LOGO
+			<div class="circle">
+  				<br />
+  				Easy
+  				<br />
+  				Does 
+  				<br />
+  				It
+			</div>
 		</div>
-		<div class="col-xs-4">
+		<div class="col-xs-4 slogan">
 			Helpful reminders for everyday life
 		</div>
-		<div class="col-xs-5">
+		<div class="col-xs-5 links">
 			<%= link_to 'Contribute', '#' %>
 			<%= link_to 'About', '#' %>
 		</div>
 	</header>
-
+	<hr />
 	<br class="clear" />
 
 <%= yield %>
