--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,9 @@
 		<div class="col-xs-3">
 			<div class="circle">
   				<br />
-  				Easy
+  				Zen
   				<br />
-  				Does 
-  				<br />
-  				It
+  				Gen 
 			</div>
 		</div>
 		<div class="col-xs-4 slogan">
@@ -29,7 +27,21 @@
 	<hr />
 	<br class="clear" />
 
-<%= yield %>
+<div class="container">
+	<%= yield %>
+</div>
+
+<div class="footer">
+	<div class="container">
+		<div class="col-xs-6">
+			<%= link_to "Need more inspiration?", "#", class: 'next-quote' %>
+		</div>
+		<div class="col-xs-6 footer-blurb">
+			Created by Megan Barker
+		</div>
+	</div>
+</div>
+
 
 </body>
 </html>
