--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,21 @@
 <body>
 	<header>
 		<div class="col-xs-3">
+		  <%= link_to root_path, class: 'logo' do %>
 			<div class="circle">
   				<br />
-  				Zen
+  				Zen Gen...
   				<br />
-  				Gen 
+  				Easy Does It
+  				<br />
 			</div>
+		  <% end %>
 		</div>
 		<div class="col-xs-4 slogan">
 			Helpful reminders for everyday life
 		</div>
 		<div class="col-xs-5 links">
-			<%= link_to 'Contribute', '#' %>
+			<%= link_to 'Contribute', new_quote_path %>
 			<%= link_to 'About', '#' %>
 		</div>
 	</header>
@@ -34,7 +37,7 @@
 <div class="footer">
 	<div class="container">
 		<div class="col-xs-6">
-			<%= link_to "Need more inspiration?", "#", class: 'next-quote' %>
+			<%= link_to "Need more inspiration?", root_path, class: 'next-quote' %>
 		</div>
 		<div class="col-xs-6 footer-blurb">
 			Created by Megan Barker
