--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,19 +12,19 @@
 		  <%= link_to root_path, class: 'logo' do %>
 			<div class="circle">
   				<br />
-  				Zen Gen...
+  				Zen
   				<br />
-  				Easy Does It
+  				Generator
   				<br />
 			</div>
 		  <% end %>
 		</div>
 		<div class="col-xs-4 slogan">
-			Helpful reminders for everyday life
+			Helpful advice for everyday life
 		</div>
 		<div class="col-xs-5 links">
 			<%= link_to 'Contribute', new_quote_path %>
-			<%= link_to 'About', '#' %>
+			<%= link_to 'About', about_path %>
 		</div>
 	</header>
 	<hr />
