--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,16 @@
   				Zen
   				<br />
   				Generator
-  				<br />
 			</div>
 		  <% end %>
 		</div>
-		<div class="col-xs-4 slogan">
+		<div class="col-sm-4 hidden-xs slogan">
 			Helpful advice for everyday life
 		</div>
-		<div class="col-xs-5 links">
+		<div class="col-xs-8 col-xs-offset-1 col-sm-offset-0 col-sm-5 links">
 			<!-- Button trigger modal -->
 			<%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
+			&nbsp;&nbsp;
 			<%= link_to 'About', about_path %>
 		</div>
 	</header>
@@ -39,8 +39,9 @@
       </div>
       <%= simple_form_for Quote.new do |f| %>
         <div class="modal-body">
-			<%= f.input :saying %>
-			<%= f.input :author %>
+			<%= f.input :saying, label: "What is the saying you want to add?", placeholder: 'You are the sky. Everything else - it\'s just the weather.' %>
+			<br />
+			<%= f.input :author, label: "Who is the author, person or organization that said it?", placeholder: 'Pema Chodron' %>
 		</div>
 		<div class="modal-footer">
         	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -50,8 +51,6 @@
     </div>  
   </div>
 </div>
-
-
 
 	<hr />
 	<br class="clear" />
@@ -67,10 +66,10 @@
 
 <div class="footer">
 	<div class="container">
-		<div class="col-xs-6">
+		<div class="col-xs-12 col-sm-6">
 			<%= link_to "Need more inspiration?", root_path, class: 'next-quote' %>
 		</div>
-		<div class="col-xs-6 footer-blurb">
+		<div class="col-xs-12 col-sm-6 footer-blurb">
 			Created by Megan Barker
 		</div>
 	</div>
