--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,5 +1,5 @@
 <h2>
-  <span>SPLURTY / No. <% @quote.id %></span>
+  <span>SPLURTY / No. <%= @quote.id %></span>
 </h2>
 
 <h1><%= @quote.saying %></h1>
