Final copy edits

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -2,32 +2,25 @@
 	<h1>About Splurty</h1>
 
 	<p>
-	Good advice is best in splurts. 
-
-	Are you tired of seemingly endless internet searches taking you down deep, dark, self-help rabbit holes. If you love a good self-help quote, but hate having to search the internet to find it, you've come to the right place. 
+	Are you tired of seemingly endless searches taking you down deep internet rabbit holes in the hopes you'll find a decent self-help quote? If you love inspirational quotes, but hate having to search all over the internet to find them, you've come to the right place. Good advice is best in <em>splurts</em>. 
 	</p>
 
 	<p>
-	 You can even contribute your own quote, that is, if you think you've got what it takes to inspire others and bring the boost. Try it for yourself!
+	 You can even contribute your own quote, that is, if you think you've got what it takes to inspire others and <em>bring the boost</em>. Try it for yourself!
 	</p> 
-	<p>
-	  If you have something to share, please leave your inspirational saying or quote and your name or the name of the person or organization the quote originates from. 
-	</p>
-
 	<p> 
-	  Splurty was built by <a target="_blank" href="http://github.com/rosebuddy">Megan Barker</a> while she was studying web development at the Firehose Project. She's not too embarrased to admit that she uses the quote generator because she finds it relaxing, fun, and most importantly, inspiring.
+	  Splurty was built by <a target="_blank" href="http://github.com/rosebuddy">Megan Barker</a> while she was studying web development at the Firehose Project. When she's not frolicking in the outdoors, she enjoys frequent trips to Splurty (a.k.a. the Zen Generator) because she finds it relaxing, fun, and most importantly, inspiring.
 	</p>
 	<br />
-
 	<div class="col-xs-12 col-sm-4">
-		<%= image_tag 'megan.jpg', class: 'img-responsive' %>
+		<%= image_tag 'megan_snow.jpg', class: 'img-responsive' %>
 	</div>
 
 	<div class="col-xs-12 col-sm-7 col-sm-offset-1">
 		<h2 class="text-center">Megan Barker</h2>
 	<br />
 	<p>
-	Megan is an environmental scientist and communications professional who has contributed to public outreach and media projects for utility providers, environmental non-profit organizations, universities, and news production companies. Having previously worked in the fields of scientific research, social work, education, and media, Megan is interested in developing innovative communication strategies, facilitating partnerships between diverse stakeholders, and developing useful information sharing tools.
+	Megan is a science, media and communications professional who has worked with utility providers, non-profits, educational institutions, production companies, and software startups. She is interested in helping companies and organizations develop collaborative, innovative communication strategies and useful information sharing tools.
 	</p>
 	<br class="clear" />
 	<br />
