--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -13,7 +13,7 @@
 	</p>
 	<br />
 	<div class="col-xs-12 col-sm-4">
-		<%= image_tag 'megan_snow.jpg', class: 'img-responsive' %>
+		<%= image_tag 'megan_profesh.jpg', class: 'img-responsive' %>
 	</div>
 
 	<div class="col-xs-12 col-sm-7 col-sm-offset-1">
