Final styling and content

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -1,33 +1,27 @@
-<div class="col-xs-10 col-xs-offset-1 about">
+<div class="about col-xs-10 col-xs-offset-1">
 	<h1>About Splurty</h1>
-
 	<p>
 	Are you tired of seemingly endless searches taking you down deep internet rabbit holes in the hopes you'll find a decent self-help quote? If you love inspirational quotes, but hate having to search all over the internet to find them, you've come to the right place. Good advice is best in <em>splurts</em>. 
 	</p>
-
 	<p>
-	 You can even contribute your own quote, that is, if you think you've got what it takes to inspire others and <em>bring the boost</em>. Try it for yourself!
+	 You can even contribute your own quote, that is, if you think you've got what it takes to inspire others and <em>bring the boost</em>. <%= link_to 'Try it for yourself!', '#', data: {toggle: 'modal', target: '#myModal'} %>
 	</p> 
-	<p> 
-	  Splurty was built by <a target="_blank" href="http://github.com/rosebuddy">Megan Barker</a> while she was studying web development at the Firehose Project. When she's not frolicking in the outdoors, she enjoys frequent trips to Splurty (a.k.a. the Zen Generator) because she finds it relaxing, fun, and most importantly, inspiring.
-	</p>
 	<br />
 	<div class="col-xs-12 col-sm-4">
 		<%= image_tag 'megan_profesh.jpg', class: 'img-responsive' %>
 	</div>
 
-	<div class="col-xs-12 col-sm-7 col-sm-offset-1">
+	<div class="col-xs-12 col-sm-8">
 		<h2 class="text-center">Megan Barker</h2>
-	<br />
-	<p>
-	Megan is a science, media and communications professional who has worked with utility providers, non-profits, educational institutions, production companies, and software startups. She is interested in helping companies and organizations develop collaborative, innovative communication strategies and useful information sharing tools.
-	</p>
-	<br class="clear" />
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
+		<br />
+		
+		<p> 
+	  Splurty was built by <a target="_blank" href="http://github.com/megankbarker">Megan Barker</a> while she was studying web development at the Firehose Project. Megan is a science, media and communications professional with an interest in developing collaborative, innovative communication strategies, and useful information sharing tools. When she isn't hiking or watching documentaries, she enjoys frequent trips to Splurty (a.k.a. the Zen Generator) because she finds it relaxing, fun, and most importantly, inspiring.
+		</p>
+	</div>
+</div>
+<br class="clear" />
+
+	
 
 	
