--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -4,14 +4,19 @@ html {
 	position: relative;
 	min-height: 100%;
 }
+
 body {
 	/* Margin bottom by footer height */
-	margin-bottom: 60px;
+	margin-bottom: 130px;
 }
+
 .footer {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
 	/* Set the fixed height of the footer here */
 	height: 60px;
+  margin-top: 70px;
+  padding-top: 10px;
+  border-top: 1px solid #eeeeee;
 }
