--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,5 +1,3 @@
-
-
 .clear {
   clear:both;
 }
@@ -23,64 +21,93 @@
     -ms-transform:rotate(11deg); /* IE 9 */
     -webkit-transform:rotate(11deg); /* Opera, Chrome, and Safari */
 }
+
 .slogan {
   font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
   	font-style: italic;
-  	padding-top: 26px;
+  	padding-top: 50px;
+    font-size: 26px;
+    font-weight: 25px;
 }
+
 .links {
-	padding-top: 26px;
+	padding-top: 60px;
+  text-align: center;
 }
+
 .links a {
 	color: black;
-	font-size: 25px;
+	font-size: 20px;
 	border-bottom: 1px solid #dfdfdf;
-    font-family: "Open Sans Regular", sans-serif;
+  font-family: "Open Sans Regular", sans-serif;
 }
+
 header {
 	border-top: 9px solid #222222;
 }
+
 hr {
 	clear: both;
 }
+
 h1 {
 	font-family: "Open Sans Condensed", sans-serif;
-    font-weight: bold;
+    // font-weight: bold;
     font-size: 42px;
 }
+
 h2 {
 	font-family: "Open Sans Condensed", sans-serif;
+  margin-top: 0px;
 }
+
 .next-quote {
     color:#f84342;
     font-family: "open_sansitalic'", sans-serif;
     font-style: italic;
-    font-size: 20px;
+    font-size: 18px;
 }
+
 .footer-blurb {
-    font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
+  font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
   font-style: italic;
   text-align: right;
-  font-size: 10px;
+  font-size: 14px;
 }
+
 .logo:hover {
   text-decoration:none;
 }
+
 .about {
   font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
 }
+
+
 @media (max-width: 750px) {
   .footer-blurb {
     text-align: left;
   }
 }
+
 .modal {
   font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
 }
+
 h2 span {
   color: #dddddd;
   font-family: "Open Sans Condensed", sans-serif;
 }
+
 ::selection {
   background-color: #f84342;
+}
+
+.img-responsive {
+  margin-bottom: 20px;
+  margin-right: 10px;
+}
+
+body {
+  font-size: 18px;
 }
